[gd_scene load_steps=6 format=3 uid="uid://4vliv5m56byx"]

[ext_resource type="Script" uid="uid://c8cyeyshqsnn2" path="res://scripts/door.gd" id="1_uvdjg"]
[ext_resource type="Texture2D" uid="uid://bupsxi6lf5wpy" path="res://assets/door.jpg" id="2_83dcw"]
[ext_resource type="AudioStream" uid="uid://dt6arifs2vs1n" path="res://assets/CROWD_SMALL_CHIL_EC049202.wav" id="3_83dcw"]
[ext_resource type="AudioStream" uid="uid://don01l4w7w4sh" path="res://assets/error.wav" id="4_la1wf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xh6nj"]
size = Vector2(36, 58)

[node name="door" type="Area2D"]
texture_filter = 1
script = ExtResource("1_uvdjg")
scene_to_load = "res://scenes/level_1.tscn"
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.04, 0.04)
texture = ExtResource("2_83dcw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xh6nj")

[node name="text_duration" type="Timer" parent="."]
one_shot = true

[node name="transition_latency" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="win" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_83dcw")

[node name="lock" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_la1wf")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="text_duration" to="." method="_on_text_duration_timeout"]
[connection signal="timeout" from="transition_latency" to="." method="_on_transition_latency_timeout"]
